# alt-profanity-check-rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: errors.rs  lib.rs
