[package]
name = "alt-profanity-check-rs"
version = "0.1.7"
edition = "2024"
description = "Rust port of alt-profanity-check"
license = "MIT"

[features]
docs_build = []

[package.metadata.docs.rs]
features = ["docs_build"]

[dependencies]
ort = "2.0.0-rc.8"
ndarray = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
thiserror = "2.0.18"

[dev-dependencies]
pyo3 = "0.28.2"
approx = "0.5.1"

[build-dependencies]
walkdir = "2.5.0"